Fix giant gap under lander and re-add contribute button.

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,7 +1,9 @@
 .dndapp {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  margin: auto;
   font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', sans-serif;
+  text-align: center;
 
   &-top-menu {
     max-width: 600px;
@@ -14,7 +16,6 @@
       padding: 10px 0;
       margin: 0;
       list-style: none;
-      text-align: center;
       font-weight: bold;
 
       a:hover {
@@ -46,24 +47,22 @@
   }
 
   &-main {
+    width: 100%;
     max-width: 600px;
-    margin: auto;
-    min-height: 100vh;
+    margin: 10px auto auto auto;
     align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     transition: .25s ease-in-out;
   }
 
   &-footer {
     max-width: 600px;
-    margin: auto;
+    margin: 10px auto;
     display: flex;
     flex-flow: column;
     font-size: $smallest-size;
-    margin-top: 50px;
     padding: 10px;
   }
 
@@ -141,7 +140,7 @@
 
     &-theme {
       display: flex;
-      margin-top: 25px;
+      margin: 25px 0;
       justify-content: center;
 
       &-picker {
